MalkADS/build/build_output_utf8_2.txt
[1/2] Building CXX object tests/CMakeFiles/tests.dir/BooksManagerTester.cpp.obj
FAILED: [code=1] tests/CMakeFiles/tests.dir/BooksManagerTester.cpp.obj 
C:\msys64\ucrt64\bin\c++.exe  -I"C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/include" -I"C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/build/_deps/catch2-src/src/catch2/.." -I"C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/build/_deps/catch2-build/generated-includes" -std=gnu++14 -MD -MT tests/CMakeFiles/tests.dir/BooksManagerTester.cpp.obj -MF tests\CMakeFiles\tests.dir\BooksManagerTester.cpp.obj.d -o tests/CMakeFiles/tests.dir/BooksManagerTester.cpp.obj -c "C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp"
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp:41:8: error: 'bool MockUser::canBookBook(int, int)' marked 'override', but does not override
   41 |   bool canBookBook(int start, int end) override { return canBook; }
      |        ^~~~~~~~~~~
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp:43:8: error: 'void MockUser::addBookBooking(int, int)' marked 'override', but does not override
   43 |   void addBookBooking(int start, int end) override {
      |        ^~~~~~~~~~~~~~
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp:47:15: error: 'std::string MockUser::getUsername()' marked 'override', but does not override
   47 |   std::string getUsername() override { return "testuser"; }
      |               ^~~~~~~~~~~
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp: In function 'void CATCH2_INTERNAL_TEST_6()':
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp:98:44: error: 'HashMap<std::__cxx11::basic_string<char>, RedBlackIntervalTree*> BooksManager::BookTable' is private within this context
   98 |   RedBlackIntervalTree **treePtr = manager.BookTable.get("B004");
      |                                            ^~~~~~~~~
In file included from C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp:4:
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/include/managers/BooksManager.h:20:43: note: declared private here
   20 |   HashMap<string, RedBlackIntervalTree *> BookTable;
      |                                           ^~~~~~~~~
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp: In member function 'MockUser* CATCH2_INTERNAL_TEST_6()::MockUsersManager::getUser(const std::string&)':
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp:106:54: error: use of local variable with automatic storage from containing function
  106 |     MockUser *getUser(const std::string &) { return &user; }
      |                                                      ^~~~
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp:93:12: note: 'MockUser user' declared here
   93 |   MockUser user;
      |            ^~~~
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp: In function 'void CATCH2_INTERNAL_TEST_6()':
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/tests/BooksManagerTester.cpp:109:28: error: cannot convert 'CATCH2_INTERNAL_TEST_6()::MockUsersManager' to 'UsersManager&'
  109 |   manager.syncUserBookings(usersManager);
      |                            ^~~~~~~~~~~~
      |                            |
      |                            CATCH2_INTERNAL_TEST_6()::MockUsersManager
C:/AUC/data structures/ADS-2/ADS-Project/MalkADS/include/managers/BooksManager.h:59:39: note: initializing argument 1 of 'void BooksManager::syncUserBookings(UsersManager&)'
   59 |   void syncUserBookings(UsersManager &usersManager);
      |                         ~~~~~~~~~~~~~~^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
